--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ body {
 
 .header {
   text-align: center;
-  background-image: url("../IP3/assets/backgrounds/h_img.jpg");
+  background-image: url("../images/h_img.jpg");
   color: white;
   
   background-repeat: no-repeat;
