changes all images url

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ body {
 
 .services {
   text-align: center;
-  background-image: url("/IP3/assets/backgrounds/s_image.jpg");
+  background-image: url("../images/s_image.jpg");
   color: white;
   background-size: cover;
   height: 410px;
@@ -116,7 +116,7 @@ body {
 } 
 
 .contact_us {
-  background-image: url("/IP3/assets/backgrounds/c_image.jpg");
+  background-image: url("../images/c_image.jpg");
   color: white;
   background-size: cover;
   height: 560px;
